@@ -3,6 +3,9 @@ The "r99999" numbers are Subversion revision numbers.
 
 Changes for current svn
 =======================
+ o 18255 2017-03-21 Avoid dependency on "org.apache.commons.lang"
+   In JdbcConnectionPool.java replaced StrTokenizer with StringTokenizer
+ 
  o 18253 2017-01-03 Mime plugin DropIfNotDeliverableUniqueOnly supports MD5SUM check
    MimeAccessPlugin[DropIfNotDeliverableUniqueOnly][1.0]=org.xmlBlaster.contrib.mime.DropIfNotDeliverableUniqueOnly,useMd5Sum=true
    With useMd5Sum=true the content of most current message is checked if it is identical to previous and suppressed
